--- a/style.css
+++ b/style.css
@@ -17,9 +17,7 @@ h1{
     text-transform: capitalize;
 }
 .intro-section{
-    background-image: url("./images/pictures/wp2809515-red-black-background-removebg-preview.png");
-    background-repeat: no-repeat;
-
+   
 
 }
 section{
@@ -62,8 +60,12 @@ section{
     text-decoration: none;
     color: #fff;
     border-radius: 5px;
+    transition: .5s;
 
 
+}
+.link-button:hover{
+    background-color:#000B49 ;
 }
 
 
@@ -92,6 +94,12 @@ section{
     margin: 3% 2%;
     padding: 20px;
     border-radius: 20px;
+    transition: .5s;
+    
+}
+
+.card:hover{
+    box-shadow: 3px 4px 17px black;
 }
 .card p{
     color: #444;
@@ -100,6 +108,7 @@ section{
 .card img{
     width: 60%;
 }
+
 #card-1{
     background-color: #d3dedcd0;
     
