--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ section{
     width: 90%;
     margin: 0 auto;
 }
+.intro-section{
+    margin-top: 100px;
+}
 .row{
     display: flex;
 }
@@ -31,12 +34,12 @@ section{
 }
 .intro .title {
     
-    margin-top: 100px;
+
     margin-bottom: 5px;
     padding: 0 10px;
     font-family: 'Abril Fatface', cursive;
     letter-spacing: 3px;
-    border-left: 5px solid #9B0000;
+    border-left: 3px solid #9B0000;
     border-radius: 5px;
 }
 .intro .title h1{
@@ -97,6 +100,7 @@ section{
 
 .card:hover{
     box-shadow: 3px 4px 17px black;
+    cursor: pointer;
 }
 .card p{
     color: #444;
@@ -205,6 +209,7 @@ section{
     
 }
 
+
 .block h3 {
     margin: 0;
     padding: 0;
@@ -218,15 +223,6 @@ section{
 #block-2{background-color: #FFCBCB;}
 #block-3{background-color: #D9D7F1;}
 
-#block-2:hover{ 
-    background-color: #072227;
-    color:#fff
-}
-#block-1:hover{
-     background-color: #072227;
-        color:#fff
-    }
-#block-3:hover{
-     background-color: #072227;
-        color:#fff
-    }
+
+
+   
